--- a/calculadora.html
+++ b/calculadora.html
@@ -15,30 +15,32 @@
           <tr>
             <td><button type="button" id="clear" class="operacion">C</button></td>
             <td><button type="button" id="dividir" class="operacion">/</button></td>
-            <td><button type="button" id="multiplicar" class="operacion">X</button></td>
+            <td><button type="button" id="multiplicar" class="operacion">*</button></td>
             <td rowspan="2"><button type="button" id="restar" class="operacion">-</button></td>
           </tr>
           <tr>
-            <td><button type="button">1</button></td>
-            <td><button type="button">2</button></td>
-            <td><button type="button">3</button></td>
+            <td><button type="button" class="numero">1</button></td>
+            <td><button type="button" class="numero">2</button></td>
+            <td><button type="button" class="numero">3</button></td>
           </tr>
           <tr>
-            <td><button type="button">4</button></td>
-            <td><button type="button">5</button></td>
-            <td><button type="button">6</button></td>
+            <td><button type="button" class="numero">4</button></td>
+            <td><button type="button" class="numero">5</button></td>
+            <td><button type="button" class="numero">6</button></td>
             <td rowspan="2"><button type="button" id="sumar" class="operacion">+</button></td>
           </tr>
           <tr>
-            <td><button type="button">7</button></td>
-            <td><button type="button">8</button></td>
-            <td><button type="button">9</button></td>
+            <td><button type="button" class="numero">7</button></td>
+            <td><button type="button" class="numero">8</button></td>
+            <td><button type="button" class="numero">9</button></td>
           </tr>
           <tr>
-            <td colspan="2"><button type="button">0</button></td>
-            <td colspan="2"><button type="button" id="igual"  class="operacion">=</button></td>
+            <td colspan="2"><button type="button" class="numero">0</button></td>
+            <td colspan="2"><button type="button" id="igual" class="operacion">=</button></td>
           </tr>
-          </table>
-      </form>
+        </table>
+    </form>
+
+    <script src="calculadora.js"></script>
 </body>
 </html>
